Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-15582

mmsys.cpl does not retrieve and set MIDI output device

    XMLWordPrintable

Details

    Description

      ROS mmsys.cpl is only able to list available MIDI output devices, but it does not properly select current MIDI out device, and it does not allow to set it.

      Confirmed by running ROS mmsys.cpl in Windows XP.

       

      Selected MIDI output device is placed in a registry string: HKEY_CURRENT_USER\Software\Microsoft\Windows\CurrentVersion\Multimedia\MIDIMap , value: szPname

      Attachments

        Issue Links

          Activity

            People

              binarymaster Stas'M
              binarymaster Stas'M
              Votes:
              2 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: