[MMSYS] Properly select current MIDI output device

CORE-15582